@@ -22,6 +22,7 @@ locals {
         boot_disk_type     = var.partitions[pid].compute_disk_type
         image              = var.partitions[pid].image
         image_hyperthreads = var.partitions[pid].image_hyperthreads
+        shielded_instance  = var.partitions[pid].shielded_instance
         labels             = var.partitions[pid].compute_labels
         machine_type       = var.partitions[pid].machine_type
         sa_email           = var.service_account
@@ -120,6 +121,15 @@ resource "google_compute_instance" "compute_node" {
     setup-script = file("${path.module}/../../../scripts/setup.py")
     util-script  = file("${path.module}/../../../scripts/util.py")
   }
+
+  dynamic "shielded_instance_config" {
+    for_each = each.value.shielded_instance ? [1] : null
+    content {
+      enable_secure_boot = true
+      enable_vtpm = true
+      enable_integrity_monitoring = true
+    }
+  }
 }
 
 resource "google_compute_instance_from_template" "compute_node" {
@@ -201,5 +211,16 @@ resource "google_compute_instance_from_template" "compute_node" {
 
     setup-script = file("${path.module}/../../../scripts/setup.py")
     util-script  = file("${path.module}/../../../scripts/util.py")
+  }
+
+  dynamic "shielded_instance_config" {
+    for_each = each.value.shielded_instance ? [1] : null
+    content {
+      shielded_instance_config {
+        enable_secure_boot          = true
+        enable_vtpm                 = true
+        enable_integrity_monitoring = true
+      }
+    }
   }
 }
